# short-transformers

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
examples/: basic.py  prune_in_steps.py
short_transformers/: __init__.py  dist.py  graph.py  log.py  replace_layer_and_cut.py  short_transformer.py  utils.py
short_transformers/model_factory/: remove_and_duplicate.py  remove_and_duplicate_with_merging.py
short_transformers/utils/: __init__.py  plot.py  utils.py
